--- a/flower.html
+++ b/flower.html
@@ -9,6 +9,7 @@
     <title>flowers</title>
 </head>
 <body class="container">
+  
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
@@ -307,6 +308,9 @@
       </div>
     </div>
     
+  
+    <audio id="backgroundMusic" src="flowers.mp3" preload="auto" autoplay></audio>
+
     <script src="main.js"></script>
   </body>
 </html>
